app/deployment_app.yaml
#apiVersion: extensions/v1beta1
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo
  namespace: default
spec:
  selector:
    matchLabels:
      run: demo
  template:
    metadata:
      labels:
        run: demo
    spec:
      containers:
      - image: us.gcr.io/static-road-310823/mypythonapp:version1
        imagePullPolicy: IfNotPresent
        name: demo
        ports:
        - containerPort: 80
          protocol: TCP
