app/service_app.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: "demo"
  namespace: "default"
spec:
  ports:
    - port: 80
  type: ClusterIP
  selector:
    app: "demo"
